Update project files

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Furgloo Design System - Finance Landing Page */
+/* Frugloo Design System - Finance Landing Page */
 
 @layer base {
   :root {
